# pytroll-runner

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yaml  deploy-sdist.yaml
generic_runner/: __init__.py
generic_runner/tests/: test_runner.py
pytroll_runner/: __init__.py
pytroll_runner/tests/: test_prepare_messages.py  test_runner.py
