[project]
name = "pytroll-runner"
dynamic = ["version"]
dependencies = ["posttroll>=1.10.0"]
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Communications"
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "pytroll_runner/version.py"

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
pytroll-runner = "pytroll_runner:main"

[project.optional-dependencies]
test = [
    "pytest>=8.3.5",
]

[tool.ruff]
lint.select = ["E", "W", "F", "I", "D", "S", "B", "A", "PT", "Q", "TID"]
lint.ignore = ["B905"]  # only available from python 3.10
line-length = 120

[tool.ruff.lint.per-file-ignores]
"pytroll_runner/tests/*" = ["S101"]  # assert allowed in tests

[tool.ruff.lint.pydocstyle]
convention = "google"
